slightly change template style(Prettify maybe)

--- a/group/templates/group/editGroup.html
+++ b/group/templates/group/editGroup.html
@@ -34,7 +34,7 @@ SOFTWARE.
   <br>
   <div class="alert alert-dismissable alert-warning">
     <button type="button" class="close" data-dismiss="alert">×</button>
-    <h4>You Now Setting Group...</h4>
+    <h4>Hey! You Now Setting for Group...</h4>
     <p style="color:white">hint: HOLD shift to select more than two object</p>
     <p style="color:white">hint: any change you made will save to the group</p>
   </div>
