remove label id

--- a/contest/templates/contest/clarification.html
+++ b/contest/templates/contest/clarification.html
@@ -28,7 +28,7 @@ SOFTWARE.
           <span>&times;</span>
           <span class="sr-only">Close</span>
         </button>
-        <h4 class="modal-title" id="myModalLabel">Ask Question</h4>
+        <h4 class="modal-title">Ask Question</h4>
       </div>
       <div class="modal-body">
         <form action="{% url 'contest:ask' %}" method="POST" role="form">
