--- a/contest/templates/contest/clarification.html
+++ b/contest/templates/contest/clarification.html
@@ -34,7 +34,8 @@ SOFTWARE.
         <form action="{% url 'contest:ask' %}" method="POST" role="form">
           {% csrf_token %} {{ form.contest.as_hidden }} {{ form.asker.as_hidden }}
           <div class="form-group" style="width:50%">
-            Problem name {{ form.problem }}
+            <label>Problem name</label>
+            {{ form.problem }}
           </div>
           <div class="form-group">
             <label>Description</label>
