--- a/users/templates/users/notification.html
+++ b/users/templates/users/notification.html
@@ -39,11 +39,11 @@ SOFTWARE.
     <ul class="nav nav-tabs" role="tablist" id="nav_tab">
       <li role="presentation" class="active" data-toggle="tab">
         <a href="#unread" aria-controls="unread" role="tab"
-           data-toggle="tab">Unread notifications</a>
+           data-toggle="tab">Unread Notifications</a>
       </li>
       <li role="presentation" data-toggle="tab">
         <a href="#all" aria-controls="all" role="tab"
-           data-toggle="tab">All notifications</a>
+           data-toggle="tab">All Notifications</a>
       </li>
     </ul>
 
@@ -79,7 +79,7 @@ SOFTWARE.
               {% endif %}
 
                 <td colspan=2 style="text-align: right;">
-                  <i>select all</i>
+                  <i>Select All</i>
                   <input type="checkbox"
                          onclick="check_all(this, 'del');"
                          style="margin-left:0px;margin-top: 0px;" >
@@ -134,7 +134,7 @@ SOFTWARE.
               <tr>
               {% endif %}
                 <td colspan=2 style="text-align: right;">
-                  <i>select all</i>
+                  <i>Select All</i>
                   <input type="checkbox"
                          onclick="check_all(this, 'del');"
                          style="margin-left:0px;margin-top: 0px;" >
