--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -45,7 +45,7 @@ SOFTWARE.
     <script src={% static "js/index.js" %}></script>
     <link rel="stylesheet" href={% static "css/index.css" %} media="screen">
     <link rel="stylesheet" href={% static "css/mfp-fade.css" %} media="screen">
-
+    <script src={% static "js/time.js" %}></script>
     {% block import_source %}
     {% endblock import_source %}
   </head>
