--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -76,15 +76,17 @@ SOFTWARE.
       {% for c_running in c_runnings %}
         <tr>
           <td>{{ c_running.cname }}</td>
-          <td>{{ c_running.time_diff }}</td>
+          <td name="remain"></td>
           <td></td>
+          <td name="end" class="end">{{ c_running.end_time|date:"Y/m/d H:i:s" }}</td>
         </tr>
       {% endfor %}
       {% for c_upcoming in c_upcomings %}
         <tr>
           <td>{{ c_upcoming.cname }}</td>
           <td></td>
-          <td>{{ c_upcoming.time_diff }}</td>
+          <td  name="upcome"></td>
+          <td  name="start" class="start">{{ c_upcoming.start_time|date:"Y/m/d H:i:s" }}</td>
         </tr>
       {% endfor %}
     </tbody>
