--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -74,11 +74,13 @@ SOFTWARE.
     </thead>
     <tbody class="line" id="contest_content">
       {% for c_running in c_runnings %}
-        <tr>
+        <tr id="contest_{{ c_running.id }}">
           <td>{{ c_running.cname }}</td>
           <td name="remain"></td>
           <td></td>
           <td name="end" class="end">{{ c_running.end_time|date:"Y/m/d H:i:s" }}</td>
+          <td name="contest_id" class="end">{{ c_running.id }}</td>
+          <td name="freeze_time" class="end">{{ c_running.freeze_time }}</td>
         </tr>
       {% endfor %}
       {% for c_upcoming in c_upcomings %}
