--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -29,6 +29,7 @@ SOFTWARE.
   <title>index</title>
 {% endblock title_name %}
 {% block import_source %}
+<script src={% static "js/time.js" %}></script>
 {% endblock import_source %}
 
 {% block body_block %}
