fix naming problem

--- a/users/static/css/notification.css
+++ b/users/static/css/notification.css
@@ -26,7 +26,7 @@ SOFTWARE.
   margin-bottom: 50px;
   min-height: 500px;
 }
-#nav_tab {
+#notification-tab-type {
   margin: -1px;
 }
 .tab_content {
