--- a/users/templates/users/notification.html
+++ b/users/templates/users/notification.html
@@ -36,7 +36,7 @@ SOFTWARE.
 
   <div role="tabpanel">
     <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist" id="nav_tab">
+    <ul class="nav nav-tabs" role="tablist" id="notification-tab-type">
       <li role="presentation" class="active" data-toggle="tab">
         <a href="#unread" aria-controls="unread" role="tab"
            data-toggle="tab">Unread Notifications</a>
