--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -49,17 +49,21 @@ SOFTWARE.
               <h2>{{ group_name }}</h2>
             </div>
             <div class="container-fluid" style="width:50%;float:right">
-              <div style="float:left; margin-right:40px">  
-                <h4 style="color:gray">Owner</h4>
-                <h3>{{ owner }}</h3>
+              <div style="float:left; margin-right:70px">  
+                <h4 style="color:gray;margin-bottom:30px">Owner</h4>
+                <h3 title="{{owner.email}}">{{ owner }}</h3>
               </div>
-              <div>
-                <h4 style="color:gray">Coowner</h4>
-                <h3>
-                  {% for coowner in coowner_list %}
+              <div style="float:left">
+                <h4 style="color:gray;margin-bottom:30px">Coowner</h4>
+                {% for coowner in coowner_list %}
+                  <h3 title="{{coowner.email}}" style="display:inline">
                     {{ coowner.username }}
-                  {% endfor %} 
-                </h3>
+                  </h3>
+                  {%if forloop.last %}
+                    {% else %}
+                    <h3 style="display:inline">,&nbsp</h3>
+                  {% endif %}
+                {% endfor %} 
               </div>
             </div>
           </div>
@@ -169,7 +173,7 @@ SOFTWARE.
                   <div class="modal-header">
                     <button type="btn-default" class="close" data-dismiss="modal" 
                             aria-hidden="true">&times;</button>
-                    <h5 class="modal-title">{{annowence.title}}</h4>
+                    <h5 class="modal-title">{{annowence.title|truncatechars:42}}</h4>
                   <div class="modal-body">
                     <p style="word-wrap:break-word">{{ annowence.content }}</p>
                   </div>
