--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -82,8 +82,9 @@ SOFTWARE.
             <tr>
               {% if user|can_reply:contest %}
               <td>
-              <button type="button" class="btn btn-warning btn-xs" data-toggle="modal" 
-                      data-target="#reply" onclick="select({{ clarification.id }})">Reply</button>
+              <button type="button" class="btn btn-warning btn-xs" 
+                      data-toggle="modal" data-target="#reply" 
+                      onclick="select({{ clarification.id }})">Reply</button>
               </td>
               {% endif %}
               <td>{{ forloop.counter }}</td>
