--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -29,7 +29,7 @@ SOFTWARE.
   <title>index</title>
 {% endblock title_name %}
 {% block import_source %}
-<script src={% static "js/time.js" %}></script>
+<script src={% static "js/contestTimer.js" %}></script>
 <script src={% static "js/index.js"%}></script>
 {% endblock import_source %}
 {% block body_block %}
