--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -62,7 +62,7 @@ SOFTWARE.
         <h1 class="panel-title" style="text-align:center;">Clarification</h1>
       </div>
       <div id="contest_clarification">
-        <table class="table" id="table">
+        <table class="table">
           <thead>
             <tr>
               {% if user|can_reply:contest %}
@@ -110,7 +110,7 @@ SOFTWARE.
     <hr>
     <!--Contest detail-->
     <div id="detail">
-      <ul class="nav nav-tabs" role="tablist" id="myTab">
+      <ul class="nav nav-tabs" role="tablist" id="contest_tab">
         <li class="active"><a href="#overview" role="tab" data-toggle="tab">Overview</a>
         </li>
         <li><a href="#problem" role="tab" data-toggle="tab">Problem</a>
