--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -138,158 +138,6 @@ SOFTWARE.
 <!-- /.container -->
 <!-- Contest detail info-->
 {% for contest in contests %}
-<div class="modal fade" id="contestInfo{{ contest.id }}" tabindex="-1" 
-     role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"> 
-          <span aria-hidden="true">&times;</span>
-          <span class="sr-only">Close</span>
-        </button>
-        <h2 class="modal-title" id="myModalLabel">
-            {{ contest.cname }}
-          </h2>
-      </div>
-      <div class="modal-body">
-        <ul class="nav nav-tabs" role="tablist" name="infoTab">
-          <li role="presentation" class="active"><a href="#problem{{ contest.id }}" 
-              data-toggle="tab">Problem</a>
-          </li>
-          <li role="presentation"><a href="#contestant{{ contest.id }}" data-toggle="tab">Contestant</a>
-          </li>
-          <li role="presentation"><a href="#contest_time{{ contest.id }}" data-toggle="tab">Time</a>
-          </li>
-          <li role="presentation"><a href="#contest_coowner{{ contest.id }}" data-toggle="tab">Coowner</a>
-          </li>
-          <li role="presentation"><a href="#contest_others{{ contest.id }}" data-toggle="tab">Others</a>
-          </li>
-        </ul>
-        <div class="tab-content">
-          <div class="tab-pane active" id="problem{{ contest.id }}">
-            <table class="table" style="text-align:center">
-              <thead>
-                <tr>
-                  {% if user|has_auth:contest.id %}
-                  <th style="text-align:center">Rejudge</th>
-                  {% endif %}
-                  <th style="text-align:center">#</th>
-                  <th style="text-align:center">Problem</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for problem in contest.problems %}
-                <tr>
-                  {% if user|has_auth:contest.id %}
-                  <td>
-                    <button type="button" class="btn btn-warning btn-xs">
-                      <span class="glyphicon glyphicon-refresh"></span>
-                    </button>
-                    <button type="button" class="btn btn-danger btn-xs">
-                      <span class="glyphicon glyphicon-minus"></span>
-                    </button>
-                  </td>
-                  {% endif %}
-                  <td>{{ forloop.counter }}</td>
-                  <td>{{ problem }}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-          <div class="tab-pane" id="contestant{{ contest.id }}">
-            <table class="table" style="text-align:center">
-              <thead>
-                <tr>
-                  {% if user|has_auth:contest.id %}
-                  <th></th>
-                  {% endif %}
-                  <th style="text-align:center">#</th>
-                  <th style="text-align:center">Contestant</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for contestant in contest.contestants %}
-                <tr>
-                    {% if user|has_auth:contest.id %}
-                    <td>
-                      <button type="button" class="btn btn-danger btn-xs">
-                        <span class="glyphicon glyphicon-minus"></span>
-                      </button>
-                    </td>
-                    {% endif %}
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ contestant }}</td>
-                </tr>
-                {% endfor %}
-                <tr>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="tab-pane" id="contest_time{{ contest.id }}">
-            <table class="table">
-              <tr>
-                <td>Start Time</td>
-                <td>
-                  <h3>{{ contest.start_time }}</h3>
-                </td>
-              </tr>
-              <tr>
-                <td>End Time</td>
-                <td>
-                  <h3>{{ contest.end_time }}</h3>
-                </td>
-              </tr>
-            </table>
-          </div>
-          <div class="tab-pane" id="contest_coowner{{ contest.id }}">
-            <table class="table" style="text-align:center">
-              <thead>
-                <tr>
-                  {% if user|has_auth:contest.id %}
-                  <th></th>
-                  {% endif %}
-                  <th style="text-align:center">#</th>
-                  <th style="text-align:center">Coowner</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for coowner in contest.coowner.all %}
-                <tr>
-                  {% if user|has_auth:contest.id %}
-                  <td>
-                    <button type="button" class="btn btn-danger btn-xs">
-                      <span class="glyphicon glyphicon-minus"></span>
-                    </button>
-                  </td>
-                  {% endif %}
-                  <td>{{ forloop.counter }}</td>
-                  <td>{{ coowner }}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-          <div class="tab-pane" id="contest_others{{ contest.id }}">
-            <label>Freeze Time：</label>
-            <h4>{{ contest.freeze_time }} mins</h4>
-            {% if contest.is_homework %}
-              <span class="glyphicon glyphicon-ok green" aria-hidden="true"></span>Is Homework
-            {% else %}
-              <span class="glyphicon glyphicon-remove red" aria-hidden="true"></span>Not Homework
-            {% endif %}
-            <br>
-            {% if contest.open_register %}
-              <span class="glyphicon glyphicon-ok green" aria-hidden="true"></span>Can Register
-            {% else %}
-              <span class="glyphicon glyphicon-remove red" aria-hidden="true"></span>Can Not Register
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "contest/contestInfo.html" %}
 {% endfor %} 
 {% endblock body_block %}
