--- a/contest/templates/contest/contestInfo.html
+++ b/contest/templates/contest/contestInfo.html
@@ -82,7 +82,7 @@ SOFTWARE.
                   <th style="width:20%;"></th>
                   {% endif %}
                   <th style="text-align:center;width:20%;">#</th>
-                  <th style="text-align:center;">Contestant</th>
+                  <th style="text-align:center;width:60%;">Contestant</th>
                 </tr>
               </thead>
               <tbody>
@@ -124,8 +124,8 @@ SOFTWARE.
             <table class="table" style="text-align:center">
               <thead>
                 <tr>
-                  <th style="text-align:center">#</th>
-                  <th style="text-align:center">Coowner</th>
+                  <th style="text-align:center;width:20%;">#</th>
+                  <th style="text-align:center;width:60%;">Coowner</th>
                 </tr>
               </thead>
               <tbody>
