--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -38,6 +38,12 @@ SOFTWARE.
     </div>
   {% endif %}
 {% endfor %}
+{% if has_special_judge_code %}
+Special Judge Code: <a href="/{{path.SPECIAL_PATH}}{{pid}}.c">{{pid}}.c</a>
+{% endif %}
+{% if has_partial_judge_code %}
+Partial Judge Code: <a href="/{{path.PARTIAL_PATH}}{{pid}}.c">{{pid}}.c</a>
+{% endif %}
 <br>
 <br>
 <br>
