--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -23,7 +23,6 @@ SOFTWARE.
 -->
 {% extends "index/base.html" %}
 {% load static %}
-{% load status_filters %}
 
 {% block body_block %}
 <link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
@@ -37,66 +36,8 @@ SOFTWARE.
   })
 </script>
 
-<div class="jumbotron" style="width:95%;margin:auto;">
+<div class="container-fulid">
   <h1>Status</h1>
-  <table class="table table-striped table-hover ">
-    <thead>
-      <tr>
-        <th>SID</th>
-        <th>Submit Time</th>
-        <th>Username</th>
-        <th>Problem</th>
-        <th>Status</th>
-        <th>Source</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for submission in submissions|submission_filter:user %}
-        <tr
-          {% if submission.list %}
-            title="
-              <ol style='margin:15px'>
-                {% for detail in submission.list %}
-                  <li class='row'>{{ detail.get_verdict_display }} CPU: {{ detail.cpu }}</li>
-                {% endfor %}
-              </ol>"
-            {% endif %}
-          class={% if submission.grouper.status == "AC" %}
-          "success" {% else %} "danger" {% endif %}>
-          <td>
-            {% if submission.grouper|show_detail:user %}
-              <a target="_blank" href={% url "status:view_code" submission.grouper.id %}>
-                {{submission.grouper.id}}
-              </a>
-            {% else %}
-              {{submission.grouper.id}}
-            {% endif %}
-          </td>
-          <td>{{ submission.grouper.submit_time }}</td>
-          <td>
-            {{ submission.grouper.user }}
-            {% if submission.grouper.team %}
-              ({{submission.grouper.team}})
-            {% endif %}
-          </td>
-          <td>{{ submission.grouper.problem }}</td>
-          <td>
-            {% if submission.grouper.status == "CE" or submission.grouper.status == "RF" %}
-              {% if submission.grouper|show_detail:user %}
-                <a class="ajax-popup-link" href={% url "status:error_message" submission.grouper.id %}>
-                  {{ submission.grouper.get_status_display }}
-                </a>
-              {% else %}
-                {{ submission.grouper.get_status_display }}
-              {% endif %}
-            {% else %}
-              {{ submission.grouper.get_status_display }}
-            {% endif %}
-          </td>
-          <td>{{ submission.grouper.get_language_display }}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+  {% include "status/statusTable.html" %}
 </div>
 {% endblock body_block %}
