--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -51,9 +51,10 @@ $(function() {
   }
 </style>
 
-<div class="bs-docs-section container">
+<div class="container">
+  <h1>{{ profile_user }}'s Profile</h1>
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-7">
       {% block statistic_block %}
       <div class="panel panel-default">
         <div class="panel-heading">Statistics</div>
@@ -71,7 +72,7 @@ $(function() {
       </div>
       {% endblock statistic_block %}
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-5">
       {% block profile_field_block %}
       <div class="panel panel-default">
         <div class="panel-heading">Profile</div>
@@ -85,7 +86,7 @@ $(function() {
                   <div class='col-lg-2 col-lg-offset-1'>
                     <label class="control-label">{{ field.label }}</label>
                   </div>
-                  <div class='col-lg-5'>
+                  <div class='col-lg-6'>
                     {{ field }}
                   </div>
                 </div>
@@ -110,7 +111,7 @@ $(function() {
                 <div class='col-lg-2 col-lg-offset-1'>
                   <label class="control-label">Username</label>
                 </div>
-                <div class='col-lg-5'>
+                <div class='col-lg-6'>
                   <input class="form-control" readonly="True" type="text"
                     value="{{ profile_user.username }}">
                 </div>
@@ -121,7 +122,7 @@ $(function() {
                 <div class='col-lg-2 col-lg-offset-1'>
                   <label class="control-label">Email</label>
                 </div>
-                <div class='col-lg-5'>
+                <div class='col-lg-6'>
                   <input class="form-control" readonly="True" type="email" value="{{ profile_user.email }}">
                 </div>
               </div>
@@ -137,7 +138,7 @@ $(function() {
                   <div class='col-lg-2 col-lg-offset-1'>
                     <label class="control-label">{{ field.label }}</label>
                   </div>
-                  <div class='col-lg-5'>
+                  <div class='col-lg-6'>
                     {{ field }}
                   </div>
                 </div>
