--- a/status/templates/status/statusTable.html
+++ b/status/templates/status/statusTable.html
@@ -1,4 +1,7 @@
+{% load static %}
 {% load status_filters %}
+<link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
+<script src={% static "jquery-ui/ui/jquery-ui.js" %}></script>
 
 <table class="table table-striped table-hover">
   <thead>
